--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -5,6 +5,10 @@ body{
 .container-fluid{
   padding: 0 100px;
   height: 100%;
+
+  @include media-breakpoint-down(md){
+    padding: 0 80px;
+  }
 }
 
 img{
@@ -26,18 +30,14 @@ h4{
   font-weight: bold;
 }
 
+h5{
+  font-size: 57px;
+}
+
 p{
   font-size: 25px;
 }
 
 em{
   font-weight: bold;
-}
-
-.h-50{
-  height: 50%;
-}
-
-.h-100{
-  height: 100%;
 }
