--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -3,15 +3,59 @@ $green: #85e1d7;
 $purple: #af94eb;
 $coral: #de5a69;
 $gray: #666;
-
+$yellow: #ffba43;
 
 .bg{
   &--purple{
     background-color: $purple;
     color: white;
   }
+
+  &--yellow{
+    background-color: $yellow;
+    color: white;
+  }
+
   &--green{
     background-color: $green;
     color: $gray;
   }
+}
+
+.color{
+  &--coral{
+    color: $coral;
+  }
+
+  &--light-blue{
+    color: $light_blue;
+  }
+
+  &--purple{
+    color: $purple;
+  }
+
+  &--green{
+    color: $green;
+  }
+
+  &--yellow{
+    color: $yellow;
+  }
+
+  &--gray{
+    color: $gray;
+  }
+}
+
+.h-50{
+  height: 50%;
+}
+
+.h-100{
+  height: 100%;
+}
+
+.text-center{
+  text-align: center;
 }
