--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -5,6 +5,10 @@
     display: flex;
     align-items: center;
 
+    @include media-breakpoint-down(md){
+      height: auto;
+    }
+
     h2{
       padding-top: 120px;
     }
@@ -19,6 +23,15 @@
       bottom: 0;
       left: 50%;
       transform: translate(-60%);
+
+      @include media-breakpoint-down(md){
+        position: relative;
+        transform: translate(-50%);
+      }
     }
+  }
+
+  &--silux{
+    text-align: center;
   }
 }
