--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,3 +1,5 @@
 @import "component/buttons";
 @import "component/logo";
 @import "component/nav";
+@import "component/card";
+@import "component/box";
