--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import "./vars";
 @import "./reset";
 @import "./fonts";
-@import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
+@import "../../node_modules/bootstrap/scss/bootstrap-grid";
 @import "./base";
 @import "./layout";
 @import "./component";
