initial style for 1920 completed

--- a/src/scss/component/_buttons.scss
+++ b/src/scss/component/_buttons.scss
@@ -10,6 +10,18 @@
     width: 100%;
   }
 
+  &--green{
+    font-size: 25px;
+    font-weight: 900;
+    color: white;
+    background-color: $green;
+    padding: 20px 0;
+    width: 230px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+
   &--uppercase{
     text-transform: uppercase;
   }
