--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -34,6 +34,11 @@
   }
 
   &--silux{
-    text-align: center;
+    padding: 400px 0;
+  }
+
+  &--contact{
+    padding: 300px 0 290px;
+    h3{ margin-bottom: 55px }
   }
 }
