style for mobile-991 completed

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -83,7 +83,8 @@ h5{
 
 p{
   font-size: 25px;
-  line-height: 45px;
+  line-height: 40px;
+  color: #666;
 
   @include media-breakpoint-down(lg){
     font-size: 12px;
