--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -2,9 +2,17 @@
   padding-top: 60px;
   text-align: left;
 
+  @include media-breakpoint-down(md){
+    padding-top: 85px;
+  }
+
   &__item{
     font-size: 25px;
     padding: 25px 35px 25px 138px;
+
+    @include media-breakpoint-down(md){
+      padding: 20px;
+    }
 
     &:nth-child(odd){
       background-color: #e7f9f7;
