--- a/src/scss/component/_card.scss
+++ b/src/scss/component/_card.scss
@@ -4,13 +4,40 @@
   flex-wrap: wrap;
   text-align: center;
 
+  h5{
+    margin-bottom: 50px;
+
+    @include media-breakpoint-down(md){
+      margin-bottom: 45px;
+    }
+  }
+
   &--crop{
     clip-path: polygon(138px 0, 100% 0, 100% 100%, 0 100%, 0 138px);
     padding: 145px 0 120px;
+
+    @include media-breakpoint-down(md){
+      margin-bottom: 200px;
+      margin-top: 240px;
+    }
   }
 
   &--small{
     padding: 145px 0 90px;
     margin-top: 310px;
+
+    @include media-breakpoint-down(md){
+      margin-bottom: 115px;
+      margin-top: 165px;
+    }
   }
+
+  &--square{
+    @include media-breakpoint-down(md){
+      background: none;
+      flex-direction: column;
+      padding: 0;
+    }
+  }
+
 }
