--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,10 +20,6 @@ h2{
   font-size: 82px;
 
   @include media-breakpoint-down(sm){
-    font-size: 82px
-  }
-
-  @include media-breakpoint-down(xs){
     font-size: 41px
   }
 }
@@ -41,7 +37,7 @@ h3{
     font-size: 75px
   }
 
-  @include media-breakpoint-down(xs){
+  @include media-breakpoint-down(sm){
     font-size: 37px
   }
 }
@@ -58,7 +54,7 @@ h4{
     font-size: 41px;
   }
 
-  @include media-breakpoint-down(xs){
+  @include media-breakpoint-down(sm){
     font-size: 20px;
   }
 
@@ -75,7 +71,7 @@ h5{
     font-size: 55px;
   }
 
-  @include media-breakpoint-down(xs){
+  @include media-breakpoint-down(sm){
     font-size: 28px;
   }
 
@@ -94,7 +90,7 @@ p{
     font-size: 27px;
     line-height: 47px;
   }
-  @include media-breakpoint-down(xs){
+  @include media-breakpoint-down(sm){
     font-size: 12px;
     line-height: 20px;
   }
