--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -10,6 +10,10 @@
     font-size: 25px;
     padding: 25px 35px 25px 138px;
 
+    @media (max-width: 1500px){
+      padding-left: 50px;
+    }
+
     @include media-breakpoint-down(md){
       padding: 20px;
     }
