mobile breakpoints completed

--- a/src/scss/component/_buttons.scss
+++ b/src/scss/component/_buttons.scss
@@ -20,6 +20,11 @@
     border: none;
     outline: none;
     cursor: pointer;
+
+    @media (max-width: 600px){
+      width: 130px;
+      font-size: 15px;
+    }
   }
 
   &--uppercase{
