--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -15,6 +15,10 @@ body{
   @include media-breakpoint-down(md){
     padding: 0 80px;
   }
+
+  @media (max-width: 600px){
+    padding: 0 15px;
+  }
 }
 
 img{
@@ -81,7 +85,7 @@ p{
     line-height: 47px;
   }
   @include media-breakpoint-down(sm){
-    font-size: 12px;
+    font-size: 20px;
     line-height: 20px;
   }
 
