--- a/src/scss/component/_box.scss
+++ b/src/scss/component/_box.scss
@@ -24,6 +24,11 @@
     p{ line-height: 37px; }
   }
 
+  @media (max-width: 580px){
+    padding: 0 15px !important;
+    p{ line-height: 25px; }
+  }
+
   @include media-breakpoint-down(sm){
     margin: 20px 0;
   }
@@ -34,9 +39,11 @@
     border-bottom: 3px solid #fff;
     padding-bottom: 55px;
 
-
     @include media-breakpoint-down(md){
       padding: 0 80px !important;
+    }
+    @media (max-width: 580px){
+      padding: 0 15px !important;
     }
   }
 
