--- a/src/scss/component/_card.scss
+++ b/src/scss/component/_card.scss
@@ -20,6 +20,12 @@
       margin-bottom: 200px;
       margin-top: 240px;
     }
+
+    @media (max-width: 580px){
+      clip-path: polygon(50px 0, 100% 0, 100% 100%, 0 100%, 0 50px);
+      margin-bottom: 100px;
+      margin-top: 20px;
+    }
   }
 
   &--small{
@@ -29,6 +35,11 @@
     @include media-breakpoint-down(md){
       margin-bottom: 115px;
       margin-top: 165px;
+    }
+
+    @media (max-width: 580px){
+      margin-bottom: 0;
+      margin-top: 100px;
     }
   }
 
