--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -87,5 +87,9 @@
       padding-bottom: 150px;
       h3{ margin-bottom: 250px 0 35px }
     }
+
+    @media (max-width: 600px){
+      padding: 115px 0;
+    }
   }
 }
