--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -9,6 +9,15 @@
   &__item{
     font-size: 25px;
     padding: 25px 35px 25px 138px;
+    opacity: 1;
+    display: block;
+    transition: 0.3s opacity;
+
+    &.hidden{
+      display: none;
+      opacity: 0;
+    }
+
 
     @media (max-width: 1500px){
       padding-left: 50px;
